[package]
name = "rust_crypto"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "A fork of rust-crypto that only includes sha2 implementation so it can be compiled into wasm."
keywords = ["Sha2"]
readme = "README.md"

[lib]
name = "crypto"

[dependencies]
rand = "^0.3"
hex = "0.3.1"
